add various fixes and refactorings

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./photos.ico" />
+    <link rel="shortcut icon" href="./logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo Application</title>
+    <title>Image Application</title>
   </head>
   <body>
     <div id="root"></div>
